# bluedroid

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml
examples/: server.rs  testbench_dut.rs
src/: lib.rs
src/gatt_server/: application.rs  characteristic.rs  custom_attributes.rs  custom_server_callbacks.rs  descriptor.rs  gap_event_handler.rs  gatts_event_handler.rs  mod.rs  profile.rs  service.rs
src/gatt_server/gatts_event_handler/: mod.rs
src/gatt_server/gatts_event_handler/profile/: add_char.rs  add_char_descr.rs  create.rs  start.rs  write.rs
src/gatt_server/gatts_event_handler/server/: connect.rs  disconnect.rs  set_attr_val.rs
src/utilities/: appearance.rs  attribute_control.rs  attribute_permissions.rs  ble_uuid.rs  characteristic_properties.rs  connection.rs  le_bytes_serialisable.rs  leaky_box.rs  mod.rs
