[package]
name = "bluedroid"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A wrapper for the ESP32 Bluedroid Bluetooth stack."
repository = "https://github.com/pulse-loop/bluedroid"
keywords = ["bluetooth", "bluedroid", "esp32", "embedded", "ble"]
categories = ["embedded"]
readme = "README.md"
documentation = "https://docs.rs/bluedroid"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>"]

exclude = [
    ".embuild",
    ".idea",
    ".vscode",
    "target",
    "Cargo.lock",
]

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "out"

[package.metadata.docs.rs]
targets = ["riscv32imc-esp-espidf"]
default-target = "riscv32imc-esp-espidf"
rustdoc-args = ["--no-deps"]
cargo-args = ["-Z", "build-std"]

[dependencies]
esp-idf-sys = { version = "0.31.10", features = ["native"] }
esp-idf-svc = { version = "0.42.1" }
embedded-svc = { version = "0.22.1" }
log = { version = "0.4.17" }
lazy_static = { version = "1.4.0" }

[build-dependencies]
embuild = { version = "0.30.2" }
anyhow = { version = "1.0.58" }

[dev-dependencies]
anyhow = { version = "1.0.58" }
esp-idf-sys = { version = "0.31.10", features = ["native", "binstart"] }
esp-idf-svc = { version = "=0.42.1" }
esp-idf-hal = { version = "=0.38.1" }
embedded-hal = { version = "1.0.0-alpha.8" }

[[example]]
name = "server"
required-features = ["esp-idf-sys/binstart"]

[profile.release]
strip = true
opt-level = "z"
lto = true