[package]
name = "bluedroid"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "A wrapper for the ESP32 Bluedroid Bluetooth stack."
repository = "https://github.com/pulse-loop/bluedroid"
keywords = ["bluetooth", "bluedroid", "esp32", "embedded", "ble"]
categories = ["embedded", "hardware-support"]
readme = "README.md"
documentation = "https://docs.rs/bluedroid"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>"]

exclude = [".embuild", ".idea", ".vscode", "target", "Cargo.lock"]

[package.metadata.espflash]
partition_table = "partitions.csv"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "out"

[package.metadata.docs.rs]
targets = ["riscv32imc-esp-espidf"]
default-target = "riscv32imc-esp-espidf"
rustdoc-args = ["--no-deps"]
cargo-args = ["-Z", "build-std"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["native"] }
esp-idf-svc = { version = "0.45.0" }
embedded-svc = { version = "0.24.0" }
log = { version = "0.4.17" }
lazy_static = { version = "1.4.0" }

[build-dependencies]
embuild = { version = "0.31.0" }
anyhow = { version = "1.0.58" }

[dev-dependencies]
anyhow = { version = "1.0.58" }

[[example]]
name = "server"
required-features = ["esp-idf-sys/binstart"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", version = "0.45.0" }
